BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/State_BMS_EMEA__c.object
<CustomObject>
    <description>SW July 21 2014 :Custom object to store the list of States that may be associated to a customer address.</description>
    <fields>
        <fullName>BMS_Code_BMS_EMEA__c</fullName>
        <description>VPRo July 21: Custom field to store the BMS Code associated to a given State record.</description>
        <label>BMS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCV_Code_BMS_EMEA__c</fullName>
        <description>VPRO July 2014: Custom field to capture the CCV Code of a State record.</description>
        <label>CCV Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_BMS_EMEA__c</fullName>
        <description>VPRO July 2014: Custom field to display the list of countries a given State record is relevant for.</description>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_BMS_EMEA__c</fullName>
        <description>VPRo July 2014: Custom field to store the description of a State record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_EMEA__c</fullName>
        <description>VPRO July 2014: external ID used for migrations</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_BMS_EMEA__c</fullName>
        <description>VPRO July 2014: Custom field to capture the list of languages a role record applies to,</description>
        <label>Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_label_BMS_EMEA__c</fullName>
        <description>VPRO July 2014: Custom field to store the short label of a State record.</description>
        <label>Short label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>